Custom--app/main/default/objects/HD_Budget_Walk__c/HD_Budget_Walk__c.object-meta.xml
<CustomObject>
    <label>HD Budget Walk</label>
    <nameField>
        <displayFormat>BW-{000000}</displayFormat>
        <label>HD Budget Walk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HD Budget Walks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>