Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Acq_Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>Acq_Prospect_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acq Prospect ID</label>
    <referenceTo>Acq_Prospect__c</referenceTo>
    <relationshipLabel>HD Budget Walk</relationshipLabel>
    <relationshipName>HD_Budget_Walk</relationshipName>
    <type>Lookup</type>
</CustomField>