Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <formula>Residence__r.Address_City__c</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>