Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Address_County__c.field-meta.xml
<CustomField>
    <fullName>Address_County__c</fullName>
    <formula>Residence__r.County__c</formula>
    <label>County</label>
    <type>Text</type>
</CustomField>