Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <formula>Residence__r.Address_State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>