Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <formula>Residence__r.Address_Street__c</formula>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>