Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Code__c</fullName>
    <formula>Residence__r.Address_Zip_Code__c</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>