Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Approval_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Approval_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Back End Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HD_Budget_Walks1</relationshipName>
    <type>Lookup</type>
</CustomField>