Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <formula>Residence__r.Baths__c</formula>
    <label>Baths</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>