Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <formula>Residence__r.Bedrooms__c</formula>
    <label>Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>