Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Budget_Construction_Manager__c.field-meta.xml
<CustomField>
    <fullName>Budget_Construction_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Construction Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HD_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>