Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, 'Cancelled') , 'Cancelled' , 
IF( NOT( AND( ISNULL(Revised_Budget__c) , ISBLANK(Revised_Budget__c) ) ), 'Approved', 
IF( NOT( AND( ISNULL(Submitted_Budget__c) , ISBLANK(Submitted_Budget__c) ) ), 
'Submitted' , 'In Process' 
) 
) 
)</formula>
    <label>Budget Status</label>
    <type>Text</type>
</CustomField>