Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Electric_Meter__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter__c</fullName>
    <formula>Residence__r.Electric_Meter_Number__c</formula>
    <label>Electric Meter #</label>
    <type>Text</type>
</CustomField>