Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Electric_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter_Reading__c</fullName>
    <label>Electric Meter Reading</label>
    <length>155</length>
    <type>Text</type>
</CustomField>