Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Electric_Status__c.field-meta.xml
<CustomField>
    <fullName>Electric_Status__c</fullName>
    <formula>TEXT(Residence__r.Electric_Status__c)</formula>
    <label>Electric Status</label>
    <type>Text</type>
</CustomField>