Custom--app/main/default/objects/HD_Budget_Walk__c/fields/File_Storage_Alias__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Alias__c</fullName>
    <formula>Residence__r.Address_Street__c</formula>
    <label>File Storage Alias</label>
    <type>Text</type>
</CustomField>