Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Gas_Meter__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter__c</fullName>
    <formula>Residence__r.Gas_Meter_Number__c</formula>
    <label>Gas Meter #</label>
    <type>Text</type>
</CustomField>