Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Gas_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter_Reading__c</fullName>
    <label>Gas Meter Reading</label>
    <length>155</length>
    <type>Text</type>
</CustomField>