Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Gas_Status__c.field-meta.xml
<CustomField>
    <fullName>Gas_Status__c</fullName>
    <formula>TEXT(Residence__r.Gas_Status__c)</formula>
    <label>Gas Status</label>
    <type>Text</type>
</CustomField>