Custom--app/main/default/objects/HD_Budget_Walk__c/fields/In_Nitro__c.field-meta.xml
<CustomField>
    <fullName>In_Nitro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Nitro</label>
    <type>Checkbox</type>
</CustomField>