Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <formula>IF( OR( ISBLANK( TRIM(Rehab__r.Yardi_Code__c) ), ISNULL( Rehab__r.Yardi_Code__c ) )  , Name ,  Rehab__r.Yardi_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Job Reference #</label>
    <type>Text</type>
</CustomField>