Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Drive Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>