Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Obsolete_Electric_Notes__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Electric_Notes__c</fullName>
    <label>Obsolete Electric Notes</label>
    <type>TextArea</type>
</CustomField>