Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Obsolete_Gas_Status__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Gas_Status__c</fullName>
    <label>Obsolete Gas Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Confirmed On</fullName>
            </value>
            <value>
                <fullName>Pending Action Items</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>