Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Obsolete_Water_Notes__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Water_Notes__c</fullName>
    <label>Obsolete Water Notes</label>
    <type>TextArea</type>
</CustomField>