Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Photos_Uploaded_After_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Photos_Uploaded_After_Rehab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Uploaded After Rehab</label>
    <type>Checkbox</type>
</CustomField>