Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline ID</label>
    <referenceTo>Property_Opportunity__c</referenceTo>
    <relationshipName>HD_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>