Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Portfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_ID__c</fullName>
    <formula>Rehab__r.Portfolio__r.Name</formula>
    <label>Portfolio ID</label>
    <type>Text</type>
</CustomField>