Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Property_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Text__c</fullName>
    <label>Property Address Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>