Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect ID</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipName>HD_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>