Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Market2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>