Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab ID</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipName>HD_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>