Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Residence ID</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipLabel>HD Budget Walks</relationshipLabel>
    <relationshipName>HD_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>