Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Revised_Budget__c.field-meta.xml
<CustomField>
    <fullName>Revised_Budget__c</fullName>
    <label>Revised Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>