Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Revised_By__c.field-meta.xml
<CustomField>
    <fullName>Revised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is populated via Nitro, as long as your Nitro User ID is captured on your Salesforce User record.   If that isn't happening, please open an SF Request.</inlineHelpText>
    <label>Revised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HD_Budget_Walks3</relationshipName>
    <type>Lookup</type>
</CustomField>