Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <label>Revision Date</label>
    <type>DateTime</type>
</CustomField>