Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Script_Run__c.field-meta.xml
<CustomField>
    <fullName>Script_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Script Run</label>
    <type>Checkbox</type>
</CustomField>