Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Send_to_Nitro__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Nitro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Nitro</label>
    <type>Checkbox</type>
</CustomField>