Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Square_Foot_Difference__c.field-meta.xml
<CustomField>
    <fullName>Square_Foot_Difference__c</fullName>
    <label>Square Foot Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>