Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Nitro Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Send to Nitro</fullName>
            </value>
            <value>
                <fullName>Sent to Nitro</fullName>
            </value>
            <value>
                <fullName>Received by Nitro</fullName>
            </value>
            <value>
                <fullName>Error Sending to Nitro</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>