Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <label>Submit Date</label>
    <type>DateTime</type>
</CustomField>