Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HD_Budget_Walks4</relationshipName>
    <type>Lookup</type>
</CustomField>