Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Budget Walk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Acquisitions</fullName>
            </value>
            <value>
                <fullName>Post-Acquisitions</fullName>
            </value>
            <value>
                <fullName>Turn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>