Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Walk_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Walk_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Walk Front End Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HD_Budget_Walks2</relationshipName>
    <type>Lookup</type>
</CustomField>