Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Walk_Supervisor_Region__c.field-meta.xml
<CustomField>
    <fullName>Walk_Supervisor_Region__c</fullName>
    <formula>TEXT(Walk_Supervisor__r.Region__c)</formula>
    <label>Walk Supervisor Region</label>
    <type>Text</type>
</CustomField>