Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Walk_Supervisor_Username__c.field-meta.xml
<CustomField>
    <fullName>Walk_Supervisor_Username__c</fullName>
    <formula>Walk_Supervisor__r.Username</formula>
    <label>Walk Supervisor Username</label>
    <type>Text</type>
</CustomField>