Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Water_Meter__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter__c</fullName>
    <formula>Residence__r.Water_Meter_Number__c</formula>
    <label>Water Meter #</label>
    <type>Text</type>
</CustomField>