Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Water_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter_Reading__c</fullName>
    <label>Water Meter Reading</label>
    <length>155</length>
    <type>Text</type>
</CustomField>