Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Water_Status__c.field-meta.xml
<CustomField>
    <fullName>Water_Status__c</fullName>
    <formula>TEXT(Residence__r.Water_Status__c)</formula>
    <label>Water Status</label>
    <type>Text</type>
</CustomField>