Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Yardi_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Code_Text__c</fullName>
    <label>Yardi Code (Text)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>