Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Yardi_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code__c</fullName>
    <formula>Rehab__r.Yardi_Code__c</formula>
    <label>Yardi Property Code</label>
    <type>Text</type>
</CustomField>