Custom--app/main/default/objects/HD_Budget_Walk__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <formula>Residence__r.Year_Built__c</formula>
    <label>Year Built</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>