Custom--app/main/default/objects/HD_Budget_Walk__c/validationRules/VR_Front_End_Supervisor.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Front_End_Supervisor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Send_to_Nitro__c , OR(ISNULL(Walk_Supervisor__c), ISBLANK(Walk_Supervisor__c) ) )</errorConditionFormula>
    <errorDisplayField>Walk_Supervisor__c</errorDisplayField>
    <errorMessage>Budget Walk Front End Supervisor is required to Send to Nitro.</errorMessage>
</ValidationRule>