Custom--app/main/default/objects/HD_Budget_Walk__c/listViews/Errors_sending_to_Nitro.listView-meta.xml
<ListView>
    <fullName>Errors_sending_to_Nitro</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_County__c</columns>
    <columns>Walk_Supervisor__c</columns>
    <columns>Approval_Supervisor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error Sending to Nitro</value>
    </filters>
    <label>Errors sending to Nitro</label>
    <sharedTo>
        <group>SFDC_DEV_Support</group>
    </sharedTo>
</ListView>