Custom--app/main/default/objects/HD_Budget_Walk__c/listViews/HD_Budget_Walks_Complete_TODAY.listView-meta.xml
<ListView>
    <fullName>HD_Budget_Walks_Complete_TODAY</fullName>
    <columns>Revision_Date__c</columns>
    <columns>NAME</columns>
    <columns>Rehab__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_County__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Walk_Supervisor__c</columns>
    <columns>Approval_Supervisor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Revision_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>HD Budget Walks Complete TODAY</label>
</ListView>