Custom--app/main/default/objects/HD_Budget_Walk__c/listViews/In_Process_Budget_Walk_Requests.listView-meta.xml
<ListView>
    <fullName>In_Process_Budget_Walk_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_County__c</columns>
    <columns>Walk_Supervisor__c</columns>
    <columns>Approval_Supervisor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Budget_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>In Process Budget Walk Requests</label>
</ListView>