Custom--app/main/default/objects/HD_Budget_Walk__c/listViews/Phoenix.listView-meta.xml
<ListView>
    <fullName>Phoenix</fullName>
    <columns>NAME</columns>
    <columns>Rehab__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_County__c</columns>
    <columns>Walk_Supervisor__c</columns>
    <columns>Approval_Supervisor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>File_Storage_Alias__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Phoenix</value>
    </filters>
    <label>Phoenix</label>
</ListView>