Custom--app/main/default/objects/HD_Budget_Walk__c/listViews/Pre_Rehab_Walks.listView-meta.xml
<ListView>
    <fullName>Pre_Rehab_Walks</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_County__c</columns>
    <columns>Walk_Supervisor__c</columns>
    <columns>Approval_Supervisor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rehab__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Pre-Acquisitions</value>
    </filters>
    <label>Pre Rehab Walks</label>
</ListView>